--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
 
     <div class="container">
-        <h1>Coming Soon</h1>
+        <h1>⏳ Coming Soon ⏳</h1>
         <p>My blog is under construction. Stay tuned for updates!</p>
         <div class="countdown" id="countdown"></div>
     </div>
